only show forms if sign in user.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
       <a href="users/edit">Edit profile</a>
       <% else %>
       <a href="/users/sign_up">Sign up</a>
-      <a href="/user/sign_in">Sign in</a>
+      <a href="/users/sign_in">Sign in</a>
       <% end %>
     </nav>
 
