--- a/app/views/boards/index.html.erb
+++ b/app/views/boards/index.html.erb
@@ -13,7 +13,7 @@
     <h2>
       Add a new board
     </h2>
-
+  <% if current_user != nil %>
     <form action="/insert_board" method="post">
       <div>
         <label for="name_box">
@@ -27,6 +27,9 @@
         Add board
       </button>
     </form>
+      <% else %>
+      <p>You must be <a href="/users/sign_in">sign in</a> to add a board.</p>
+      <% end %>
   </div>
 </div>
 
@@ -38,6 +41,12 @@
       <a href="/boards/<%= a_board.id %>">
         <%= a_board.name %>
       </a>
+      <div>
+      <% matching_user = User.where({ :id => a_board.user_id }) %>
+      <% the_user = matching_user.at(0) %>
+      <%= the_user.email %>
+      </div>
+      <hr>
     </li>
   <% end %>
 </ul>
