--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -11,7 +11,7 @@
 <h2>
   Add a new post
 </h2>
-
+<% if current_user != nil %>
 <form action="/insert_post" method="post">
   <div>
     <label for="title_box">
@@ -43,6 +43,9 @@
     Add post
   </button>
 </form>
+<% else %>
+<p>You must <a href="/users/sign_in">sign in</a> to make a post.</p>
+<% end %>
 
 <hr>
 
